syntax = "proto3";

option csharp_namespace = "Personal_blog";

package personalBlog;

service Authorization {
  rpc login (LoginForm) returns (TokenResponse);
  rpc register (RegisterForm) returns (TokenResponse);
}

message LoginForm {
  string accountName = 1;
  string password = 2;
}

message RegisterForm {
  string name = 1;
  string accountName = 2;
  string password = 3;
}

message TokenResponse {
  string token = 1;
}
